# FunnyPhoto

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wlj/funnyphoto/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: gl_engine.cpp
app/src/main/cpp/assimp/: anim.h  defs.h
app/src/main/cpp/gl/: EglHelper.cpp  EglHelper.h  EglThread.cpp  EglThread.h
app/src/main/cpp/message/: GlMessageQueue.cpp  GlMessageQueue.h  Message.h
app/src/main/cpp/model/: mesh.h  model.h  shader.h
app/src/main/cpp/samples/: GLSampleBase.h  Model3DSample.cpp
app/src/main/cpp/util/: GLUtils.h  ImageDef.h  JavaCall.cpp  JavaCall.h  LogUtil.h
app/src/main/java/com/wlj/funnyphoto/: Function.java  FunnyEngine.java  GlideEngine.java  MenuView.java
app/src/main/java/com/wlj/funnyphoto/activity/: BaseActivity.java  MainActivity.java  SplashActivity.java
app/src/main/java/com/wlj/funnyphoto/adpter/: FunctionAdapter.java
app/src/main/java/com/wlj/funnyphoto/util/: CameraUtils.java  CommonUtils.java  Constant.java  DimenUtils.java
app/src/main/java/com/wlj/funnyphoto/views/: LoadCircleView.java  LoadingDialog.java
app/src/main/res/drawable/: loading_dialog_bg.xml  setting_bg.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_splash.xml  activity_texture.xml  dialog_loading.xml  item_function_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/wlj/funnyphoto/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
